// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`default command inputing 1`] = `
"--config	Use specified config file
--mode	Set env mode
--logLevel	info | warn | error | silent
:4
"
`;

exports[`default command long option 1`] = `
"--config	Use specified config file
:4
"
`;

exports[`global option 1`] = `
":4
"
`;

exports[`no input 1`] = `
"dev	Start dev server
build	Build project
lint	Lint project
:4
"
`;

exports[`subcommand long option 1`] = `
"--port	Specify port
:4
"
`;

exports[`subcommand only 1`] = `
"dev	Start dev server
:4
"
`;

exports[`subcommand option inputing 1`] = `
"--host	Specify hostname
--port	Specify port
:4
"
`;

exports[`subcommand short option 1`] = `
"-H	Specify hostname
:4
"
`;

exports[`subcommand unknown option 1`] = `
":4
"
`;
